# npy-append-array

./: .gitignore  LICENSE  README.md  citation.cff  demo.py  pyproject.toml  setup.py  test.py
npy_append_array/: __init__.py  format.py  npy_append_array.py
